--- a/run.ipynb
+++ b/run.ipynb
@@ -44,12 +44,12 @@
       "start send\n",
       "padding start len:  67584\n",
       "user_name :Alice, len : 40\n",
-      "password :b'\\x82\\x9eb\\x97c~\\x96\\xe25=', len : 2048\n",
+      "password :b']U\\x94B\\n\\xd3\\x1f\\xa8>\\xe2', len : 2048\n",
       "file len : 73728\n",
       "all bits len : 154368\n",
       "start receive\n",
       "user_name :Alice, len : 40\n",
-      "password :bytearray(b'\\x82\\x9eb\\x97c~\\x96\\xe25='), len : 2048\n",
+      "password :bytearray(b']U\\x94B\\n\\xd3\\x1f\\xa8>\\xe2'), len : 2048\n",
       "file len : 73728\n",
       "Receive file successfully!\n"
      ]
