--- a/run.ipynb
+++ b/run.ipynb
@@ -70,6 +70,7 @@
     "print(\"start send\")\n",
     "send_bits = client.send_file(\"test_file/test.txt\")\n",
     "\n",
+    "send_bits += trans_helper.generate_random_binary_string(233) # 模拟padding后面的一些随机串\n",
     "\n",
     "print(\"start receive\")\n",
     "server.receive_file(\"test_file/test2.txt\",send_bits[1151:])"
