--- a/run.ipynb
+++ b/run.ipynb
@@ -42,14 +42,14 @@
      "text": [
       "start client and server\n",
       "start send\n",
-      "padding start len:  67584\n",
+      "padding start len:  8192\n",
       "user_name :Alice, len : 40\n",
-      "password :b']U\\x94B\\n\\xd3\\x1f\\xa8>\\xe2', len : 2048\n",
+      "password :b'A\\xf4\\x98\\xaa\\xfa\\xc4\\xde!\\x08\\\\', len : 2048\n",
       "file len : 73728\n",
-      "all bits len : 154368\n",
+      "all bits len : 103168\n",
       "start receive\n",
       "user_name :Alice, len : 40\n",
-      "password :bytearray(b']U\\x94B\\n\\xd3\\x1f\\xa8>\\xe2'), len : 2048\n",
+      "password :bytearray(b'A\\xf4\\x98\\xaa\\xfa\\xc4\\xde!\\x08\\\\'), len : 2048\n",
       "file len : 73728\n",
       "Receive file successfully!\n"
      ]
@@ -58,14 +58,13 @@
    "source": [
     "# gen keys\n",
     "import rsa_helper\n",
-    "rsa_helper.generate_keys(\"keys/Alice/\", 2048)\n",
+    "rsa_helper.generate_keys(\"keys/Alice/\")\n",
     "import trans_helper\n",
-    "print(\"start client and server\")\n",
-    "client = trans_helper.Client(\"keys/Alice/\",random_len=10,user_name=\"Alice\")\n",
+    "\n",
+    "client = trans_helper.Client(\"keys/Alice/\",random_len=10,user_name=\"Alice\", password=\"passwordAlice\")\n",
     "\n",
     "server = trans_helper.Server()\n",
-    "server.add_user(\"keys/Alice/\",10,\"Alice\")\n",
-    "\n",
+    "server.add_user(\"keys/Alice/\",10,\"Alice\", password=\"passwordAlice\")\n",
     "\n",
     "print(\"start send\")\n",
     "send_bits = client.send_file(\"test_file/test.txt\")\n",
@@ -93,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.1.0"
   }
  },
  "nbformat": 4,
