add ecc for 10/16 rate

--- a/run.ipynb
+++ b/run.ipynb
@@ -33,23 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start client and server\n",
       "start send\n",
       "padding start len:  8192\n",
       "user_name :Alice, len : 40\n",
-      "password :b'A\\xf4\\x98\\xaa\\xfa\\xc4\\xde!\\x08\\\\', len : 2048\n",
+      "password :b'\\x8f\\xf2\\xbe\\xab\\xfa\\x91\\xb6]\\x12+', len : 1024\n",
       "file len : 73728\n",
-      "all bits len : 103168\n",
-      "start receive\n",
+      "all bits len : 119856\n",
+      "diff rate  0.030978841276198106\n",
       "user_name :Alice, len : 40\n",
-      "password :bytearray(b'A\\xf4\\x98\\xaa\\xfa\\xc4\\xde!\\x08\\\\'), len : 2048\n",
+      "password :bytearray(b'\\x8f\\xf2\\xbe\\xab\\xfa\\x91\\xb6]\\x12+'), len : 1024\n",
       "file len : 73728\n",
       "Receive file successfully!\n"
      ]
@@ -69,10 +68,21 @@
     "print(\"start send\")\n",
     "send_bits = client.send_file(\"test_file/test.txt\")\n",
     "\n",
-    "send_bits += trans_helper.generate_random_binary_string(233) # 模拟padding后面的一些随机串\n",
     "\n",
-    "print(\"start receive\")\n",
-    "server.receive_file(\"test_file/test2.txt\",send_bits[1151:])"
+    "before_bits = send_bits\n",
+    "for i in range(0, len(send_bits), 16):\n",
+    "    pos = random.randint(i,i + 15)\n",
+    "    assert(i <= pos <= i + 15)\n",
+    "    flag = random.randint(0,1) >= 1\n",
+    "    if flag :\n",
+    "        send_bits = send_bits[:pos] + '1' +  send_bits[pos + 1 : ]\n",
+    "    else:\n",
+    "        send_bits = send_bits[:pos] + '0' +  send_bits[pos + 1 : ]\n",
+    "\n",
+    "\n",
+    "diff = sum([send_bits[i] != before_bits[i] for i in range(len(send_bits))])/ len(send_bits)\n",
+    "print(\"diff rate \" , diff)\n",
+    "server.receive_file(\"test2.txt\",send_bits)"
    ]
   }
  ],
@@ -92,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
