add Bob for test

--- a/run.ipynb
+++ b/run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,19 @@
     "        while os.path.getsize(file_name) < size_in_bytes:\n",
     "            random_string = ''.join(random.choice(string.ascii_letters + string.digits) for _ in range(1024))\n",
     "            f.write(random_string)\n",
+    "import filecmp\n",
+    "\n",
+    "def check_file(file1,file2):\n",
+    "    # 比较文件\n",
+    "    result = filecmp.cmp(file1, file2)\n",
+    "    return result\n",
     "\n",
     "# 使用方法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -43,12 +49,12 @@
       "start send\n",
       "padding start len:  8192\n",
       "user_name :Alice, len : 40\n",
-      "password :b'\\x8f\\xf2\\xbe\\xab\\xfa\\x91\\xb6]\\x12+', len : 1024\n",
+      "password :b'\\xc1\\x93\\x86R\\xdf\\xfe\\x90\\t\\xa3\\xf7', len : 1024\n",
       "file len : 73728\n",
       "all bits len : 119856\n",
-      "diff rate  0.030978841276198106\n",
+      "diff rate  0.031379321852890135\n",
       "user_name :Alice, len : 40\n",
-      "password :bytearray(b'\\x8f\\xf2\\xbe\\xab\\xfa\\x91\\xb6]\\x12+'), len : 1024\n",
+      "password :bytearray(b'\\xc1\\x93\\x86R\\xdf\\xfe\\x90\\t\\xa3\\xf7'), len : 1024\n",
       "file len : 73728\n",
       "Receive file successfully!\n"
      ]
@@ -82,7 +88,9 @@
     "\n",
     "diff = sum([send_bits[i] != before_bits[i] for i in range(len(send_bits))])/ len(send_bits)\n",
     "print(\"diff rate \" , diff)\n",
-    "server.receive_file(\"test2.txt\",send_bits)"
+    "server.receive_file(\"test_file/test2.txt\",send_bits)\n",
+    "\n",
+    "assert(check_file(\"test_file/test.txt\",\"test_file/test2.txt\"))"
    ]
   }
  ],
