--- a/run.ipynb
+++ b/run.ipynb
@@ -92,6 +92,52 @@
     "\n",
     "assert(check_file(\"test_file/test.txt\",\"test_file/test2.txt\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run client\n",
+    "# gen keys\n",
+    "import rsa_helper\n",
+    "#rsa_helper.generate_keys(\"keys/Bob/\")\n",
+    "import trans_helper\n",
+    "import random\n",
+    "client = trans_helper.Client(\"keys/Bob/\",random_len=10,user_name=\"Bob\", password=\"password\")\n",
+    "\n",
+    "send_bits = client.send_file(\"test.txt\")\n",
+    "\n",
+    "before_bits = send_bits\n",
+    "for i in range(0, len(send_bits), 16):\n",
+    "    pos = random.randint(i,i + 15)\n",
+    "    assert(i <= pos <= i + 15)\n",
+    "    flag = random.randint(0,1) >= 1\n",
+    "    if flag :\n",
+    "        send_bits = send_bits[:pos] + '1' +  send_bits[pos + 1 : ]\n",
+    "    else:\n",
+    "        send_bits = send_bits[:pos] + '0' +  send_bits[pos + 1 : ]\n",
+    "     \n",
+    "\n",
+    "diff = sum([send_bits[i] != before_bits[i] for i in range(len(send_bits))])/ len(send_bits)\n",
+    "print(\"diff rate \" , diff)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# server \n",
+    "\n",
+    "server = trans_helper.Server()\n",
+    "server.add_user(\"keys/Bob/\",10,\"Bob\", password=\"password\")\n",
+    "\n",
+    "\n",
+    "server.receive_file(\"test2.txt\",receive_bits)"
+   ]
   }
  ],
  "metadata": {
